kubernetes/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: mahishi707/analytics-service:final
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: NodePort
  selector:
    app: analytics-service
  ports:
    - port: 8003
      targetPort: 8003
      nodePort: 32173  # Public port you can use in tracker.js
