kubernetes/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
spec:
  type: NodePort
  selector:
    app: clickhouse
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      nodePort: 31823  # Accessible from browser
    - name: native
      port: 9000
      targetPort: 9000
      nodePort: 31900  # Used by ClickHouse driver
