kubernetes/game-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector:
    app: game-service
  ports:
    - port: 8001
      targetPort: 8001
  type: NodePort
